# eng-canvas-bridge

./: .mcp.json  README.md  justfile  main.py  prek.toml  pyproject.toml  ref.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-backend.yml
backend/: .fastapicloudignore  .gitignore  main.py  openapi.json  pyproject.toml
backend/app/: dependencies.py  main.py  pdf_parsing.py
backend/app/parsers/: base.py  eng10.py
backend/app/routers/: courses.py  pdfs.py
backend/scripts/: export_openapi.py
backend/tests/: test_pdf_parsing.py
extension/: openapi-ts.config.ts  package.json  pnpm-lock.yaml  wxt.config.ts
extension/entrypoints/: content.ts
extension/entrypoints/content/: addToCalendar.ts  index.ts  index.tsx  style.css
extension/lib/client/: sdk.gen.ts  types.gen.ts
frontend/: .oxlintrc.json  eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: auth-screen.tsx  course-selector.tsx  course-step.tsx  file-selector.tsx  file-step.tsx  schedule-preview-step.tsx  selectable-item.tsx
frontend/src/components/ui/: magnet.jsx
frontend/src/lib/: api.ts  highlighting.ts
frontend/src/lib/client/: index.ts  sdk.gen.ts  types.gen.ts
