[project]
name = "eng-canvas-bridge-backend"
version = "0.1.0"
description = "Converts Friends Seminary english schedule PDFs to Canvas planner notes"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
extend-select = ["FAST"]

# [project.scripts]
# export-openapi = "scripts.export_openapi:main" # disabled because we would need to implement build system
