[project]
name = "eng-canvas-bridge-backend"
version = "0.1.0"
description = "Converts Friends Seminary english schedule PDFs to Canvas planner notes"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "logfire[fastapi,httpx]>=4.32.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    {include-group = "test"},
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
test = [
    "inline-snapshot>=0.32.5",
    "pytest>=9.0.2",
    "time-machine>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."] # idk why i need this but python modules without a src/ folder are weird
filterwarnings = ["ignore:builtin type swig:DeprecationWarning"]


[tool.ruff]
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
extend-select = ["FAST", "UP", "SIM", "C4", "FURB"]

# [project.scripts]
# export-openapi = "scripts.export_openapi:main" # disabled because we would need to implement build system

[tool.uv]
upgrade-package = ["ruff", "ty"]
